Eclipse IDE and build instructions for CorRelator.